--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Login Sayfası</h1>
-    <form method="POST" action="./index.html">
+    <form method="POST" action="index.html">
         <button type="submit">Giriş Yap</button>
     </form>
 </body>
