--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Login Sayfası</h1>
     
-        <button type="submit" onclick="window.location.href='/index'">Giriş Yap</button>
+        <button type="submit" onclick="window.location.href='/index.html'">Giriş Yap</button>
    
 </body>
 </html>
