--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Login Sayfası</h1>
     
-        <button type="submit" onclick="window.location.href='/'">Giriş Yap</button>
+       <a href="/index" class="button">Giriş Yap</a>
    
 </body>
 </html>
