--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Login Sayfası</h1>
     
-       <a href="/index" class="button">Giriş Yap</a>
-   
+       <a href="./" class="button">Giriş Yap</a>
+       
 </body>
 </html>
