--- a/login.html
+++ b/login.html
@@ -1,4 +1,14 @@
- <div class="banner"></div>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/css/style.css">
+</head>
+<body>
+
+<div class="banner"></div>
 
     <div class="menu">
         <a href="./index.html">Ana Sayfa</a>
