--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Login Sayfası</h1>
     
        <a href="./login.html" class="button">Giriş Yap</a>
+       <a href="./collection.html" class="button">Collection Giriş Yap</a>
        
 </body>
 </html>
