--- a/collection.html
+++ b/collection.html
@@ -65,6 +65,18 @@
             video.play();
         });
 
+    $('body').on('click touchstart', function () {
+            const videoElement = document.getElementById('myVideo');
+            if (videoElement.playing) {
+                // video is already playing so do nothing
+            }
+            else {
+                // video is not playing
+                // so play video now
+                videoElement.play();
+            }
+    });
+
 
     </script>
 
