--- a/collection.html
+++ b/collection.html
@@ -55,7 +55,7 @@
     <div class="video-container">
 
 <video autoplay id="myVideo">
-     <source src="static/videos/teoman.mp4" type="video/mp4">
+     <source src="static/videos/altan.mp4" type="video/mp4">
 </video>
     </div>
 
